--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">productivyApp</string>
+    <string name="app_name">Rutinas exitosas</string>
+    <string name="txt1">Usuario</string>
+    <string name="txt2">Contraseña</string>
+    <string name="btn1">Ingresar</string>
+    <string name="btn2">Registrarse</string>
+
 </resources>
