Cambio Login y adicion Registro
cambie la estructura que tenia, la hice un poco mas amigable y le agregue la opcion de registro si no es un usuario ya registrado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Rutinas exitosas</string>
-    <string name="txt1">Usuario</string>
-    <string name="txt2">Contraseña</string>
-    <string name="btn1">Ingresar</string>
-    <string name="btn2">Registrarse</string>
+    <string name="Usuario">Usuario</string>
+    <string name="Password">Password</string>
+    <string name="Login">Iniciar Sesión</string>
+    <string name="Pregunta">¿No estas registrado?</string>
+    <string name="Registro">Crear una cuenta</string>
+
 
 </resources>
